migrate to shadow

--- a/org/vivo.org
+++ b/org/vivo.org
@@ -6,7 +6,7 @@
 
 
 * pub [14/14]
-  SCHEDULED: <2016-10-19 周三>
+  SCHEDULED: [2016-10-19 周三]
   CLOCK: [2016-10-19 周三 09:42]--[2016-10-19 周三 09:44] =>  0:02
 ** DONE [#A] 问王青芸关于住房的事 -> 刘顺顺
    CLOSED: [2017-03-14 周二 19:57] SCHEDULED: <2017-03-01 周三>
@@ -339,12 +339,14 @@
     - State "解决待关闭" from "DONE"       [2016-10-29 周六 15:10]
     - State "DONE"       from "TODO"       [2016-10-29 周六 15:01]
     - State "TODO"       from ""           [2016-10-28 周五 12:06]
-** PD1635 [15/18]
+** PD1635 [18/18]
 *** DONE 提供后置闪光灯 data sheet -> 丘志平
     CLOSED: [2017-03-06 周一 11:47] SCHEDULED: <2017-03-04 周六>
     - State "DONE"       from "TODO"       [2017-03-06 周一 11:47]
     - State "TODO"       from ""           [2017-03-04 周六 16:51]
-*** TODO 前置第一版问题点 [5/5]
+*** 关闭 前置第一版问题点 [5/5]
+    CLOSED: [2017-04-07 周五 12:43]
+    - State "关闭"       from "TODO"       [2017-04-07 周五 12:43]
     - State "TODO"       from ""           [2017-02-18 周六 11:11]
 **** 解决待关闭 [B170220-245]前置：各场景基础及美颜拍照，整体偏黄绿    :@bug:
      CLOSED: [2017-03-06 周一 16:26] SCHEDULED: <2017-02-18 周六> 
@@ -370,7 +372,9 @@
      CLOSED: [2017-03-06 周一 16:25] SCHEDULED: <2017-02-18 周六> 
      - State "解决待关闭" from "TODO"       [2017-03-06 周一 16:25]
      - State "TODO"       from ""           [2017-02-18 周六 11:13]
-*** TODO 前置第二版问题点 [14/20]
+*** 关闭 前置第二版问题点 [20/20]
+    CLOSED: [2017-04-07 周五 12:43]
+    - State "关闭"       from "TODO"       [2017-04-07 周五 12:43]
     - State "TODO"       from ""           [2017-03-06 周一 18:07]
 **** 解决待关闭 [B170306-536] 前置基础拍照：中低色温（2500K-2800K-3400K-3800K）饱和度偏高，人物肤色偏紫 :@bug:
      CLOSED: [2017-03-21 周二 09:57] SCHEDULED: <2017-03-06 周一>
@@ -396,8 +400,9 @@
      CLOSED: [2017-03-21 周二 09:58] SCHEDULED: <2017-03-06 周一>
      - State "解决待关闭" from "新的"       [2017-03-21 周二 09:58]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-562] 前置基础拍照：室内黑色背景人物肤色偏红         :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 关闭 [B170306-562] 前置基础拍照：室内黑色背景人物肤色偏红         :@bug:
+     CLOSED: [2017-04-07 周五 12:42] SCHEDULED: <2017-03-06 周一>
+     - State "关闭"       from "新的"       [2017-04-07 周五 12:42]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
 **** 解决待关闭 [B170306-569] 前置基础拍照：室外阴天上下午人物肤色饱和度稍高，人脸不够光泽，整体稍偏灰黄 :@bug:
      CLOSED: [2017-03-21 周二 09:58] SCHEDULED: <2017-03-06 周一>
@@ -410,8 +415,9 @@
      CLOSED: [2017-03-21 周二 09:59] SCHEDULED: <2017-03-06 周一>
      - State "解决待关闭" from "新的"       [2017-03-21 周二 09:59]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-572] 前置基础拍照：商场内灯光广告牌背景人物人脸偏暗、肤色偏黄 :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 关闭 [B170306-572] 前置基础拍照：商场内灯光广告牌背景人物人脸偏暗、肤色偏黄 :@bug:
+     CLOSED: [2017-04-07 周五 12:42] SCHEDULED: <2017-03-06 周一>
+     - State "关闭"       from "新的"       [2017-04-07 周五 12:42]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
 **** 解决待关闭 [B170306-576] 前置基础拍照：商场内蓝色背景人物肤色偏黄 :@bug:
      CLOSED: [2017-03-21 周二 10:00] SCHEDULED: <2017-03-06 周一>
@@ -420,15 +426,18 @@
      CLOSED: [2017-03-21 周二 10:00] SCHEDULED: <2017-03-06 周一>
      - State "解决待关闭" from "新的"       [2017-03-21 周二 10:00]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-581] 前置基础拍照：夜景人物饱和度偏高及色斑问题     :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 关闭 [B170306-581] 前置基础拍照：夜景人物饱和度偏高及色斑问题     :@bug:
+     CLOSED: [2017-04-07 周五 12:42] SCHEDULED: <2017-03-06 周一>
+     - State "关闭"       from "新的"       [2017-04-07 周五 12:42]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-610] 前置基础拍照：室内绿色背景人物肤色偏灰、无血色，嘴唇偏紫 :@bug:
-     SCHEDULED: <2017-03-06 周一>
+**** 关闭 [B170306-610] 前置基础拍照：室内绿色背景人物肤色偏灰、无血色，嘴唇偏紫 :@bug:
+     CLOSED: [2017-04-07 周五 12:43] SCHEDULED: <2017-03-06 周一>
+     - State "关闭"       from "新的"       [2017-04-07 周五 12:43]
      - State "新的"       from "TODO"       [2017-03-07 周二 11:46]
      - State "TODO"       from ""           [2017-03-06 周一 18:08]
-**** 新的 [B170306-585] 前置预览问题：进入相机前置（或拍照与美颜切换）AWB收敛慢
-     SCHEDULED: <2017-03-08 周三>
+**** 关闭 [B170306-585] 前置预览问题：进入相机前置（或拍照与美颜切换）AWB收敛慢
+     CLOSED: [2017-04-07 周五 12:43] SCHEDULED: <2017-03-08 周三>
+     - State "关闭"       from "新的"       [2017-04-07 周五 12:43]
      - State "新的"       from ""           [2017-03-08 周三 10:28]
 **** 解决待关闭 [B170221-440] 前置：【电脑屏上效果】QQ 微信室内外正常/稍暗/暗环境拍照、小视频人物肤色偏黄；（QQ暗环境人物背景稍偏蓝） :@bug:
      CLOSED: [2017-03-21 周二 10:06] SCHEDULED: <2017-03-08 周三>
@@ -437,8 +446,9 @@
      CLOSED: [2017-03-21 周二 10:06] SCHEDULED: <2017-03-08 周三>
      - State "解决待关闭" from "新的"       [2017-03-21 周二 10:06]
      - State "新的"       from ""           [2017-03-08 周三 10:30]
-**** 新的 [B170307-206] 前置：微信小视频录制时放大后人物肤色跳变；     :@bug:
-     SCHEDULED: <2017-03-08 周三>
+**** 关闭 [B170307-206] 前置：微信小视频录制时放大后人物肤色跳变；     :@bug:
+     CLOSED: [2017-04-07 周五 12:43] SCHEDULED: <2017-03-08 周三>
+     - State "关闭"       from "新的"       [2017-04-07 周五 12:43]
      - State "新的"       from ""           [2017-03-08 周三 10:30]
 *** DONE 确认dsp合成前后raw的差异
     CLOSED: [2017-02-21 周二 15:57] SCHEDULED: <2017-02-18 周六>
@@ -479,8 +489,9 @@
 *** DONE 前置补光灯校准通路
     CLOSED: [2017-03-15 周三 09:13] SCHEDULED: <2017-02-28 周二>
     - State "TODO"       from ""           [2017-02-28 周二 10:25]
-*** TODO 提供后置偏差大的 limit 模组
-    SCHEDULED: <2017-02-20 周一>
+*** 关闭 提供后置偏差大的 limit 模组
+    CLOSED: [2017-04-07 周五 12:43] SCHEDULED: <2017-02-20 周一>
+    - State "关闭"       from "TODO"       [2017-04-07 周五 12:43]
     - State "TODO"       from ""           [2017-02-20 周一 12:17]
 *** DONE 1619 后置 拍 raw 数量问题 0/1/4/6
     CLOSED: [2017-02-22 周三 10:01] SCHEDULED: <2017-02-18 周六>
