--- a/org/slf.org
+++ b/org/slf.org
@@ -1,7 +1,7 @@
 #+TITLE: self-used org to keep some something
 #+TODO: TODO(t@/!) | DONE(d@/!) CANCEL(c@/!)
 #+TAGS: secret(s)
-* priv [42/50]
+* priv [42/52]
   SCHEDULED: <2016-10-19 周三>
   - State "TODO"       from "TODO"       [2016-10-19 周三 09:00]
   她喜欢我
@@ -333,9 +333,15 @@ WpMrvBwA3C+V+FWvG0qfFrmhcq+JqIt2tDGLe/ntg0ts2SotPq9RLpIL2Jpnz7pM
 jLzlw6RZsPagOYOGlkJeyum+DjOoR8pvGYc2aHPM4N4=
 =6UzG
 -----END PGP MESSAGE-----
-** TODO test
-   - State "TODO"       from ""           [2018-10-06 Sat 15:49]
-
+** TODO 试用本地key文件解密gpg文件
+    SCHEDULED: <2018-10-14 Sun>
+   - State "TODO"       from ""           [2018-10-08 Mon 00:31]
+** TODO 学习 bable
+    SCHEDULED: <2018-10-14 Sun>
+   - State "TODO"       from ""           [2018-10-08 Mon 00:32]
+** TODO 把发送短信脚本转移到 bable 中
+    SCHEDULED: <2018-10-14 Sun>
+   - State "TODO"       from ""           [2018-10-08 Mon 00:33]
 * learn_table
 
 | student | math | pyh | mean | pi number |
