--- a/notes for mac.org
+++ b/notes for mac.org
@@ -1,3 +1,8 @@
+* ls的颜色和时间格式
+  之前在setPS1中设置了 linux 下的时间格式和 LS_COLORS
+  但是在 mac 的命令行中没效果
+  可以通过 brew install coreutils 解决
+  ( 安装之后重新载入 zshrs 即可 )
 * 显示/不显示 隐藏文件
   defaults write com.apple.finder AppleShowAllFiles -boolean true ; killall Finder
   defaults write com.apple.finder AppleShowAllFiles -boolean false ; killall Finder
