routine push and upload img

--- a/notes for uwsgi.org
+++ b/notes for uwsgi.org
@@ -1,4 +1,5 @@
 * uwsgi
+注意uwsgi配置文件里边设置 daemonize 后,会后台运行.....
 ** -w --wsgi-file 用不了 很可能是python模块没装，安装一个或者使用 uwsgi_python
 ** 一定要叫 application , 叫 app 都不行
 ** nginx 一直 502 时，换 sock 发现是 permission deny , 可以用 chmod 777，也可以把 www-data 加入到当前用户组( config 里边的 uid gid sock-chmod 都没有用 )
